--- a/backend/services/complaint-service/package.json
+++ b/backend/services/complaint-service/package.json
@@ -8,11 +8,18 @@
         "dev": "nodemon src/index.js"
     },
     "dependencies": {
-        "express": "^4.18.2",
-        "mongoose": "^8.0.0",
-        "kafkajs": "^2.2.4",
+        "bcryptjs": "^3.0.3",
         "cors": "^2.8.5",
-        "dotenv": "^16.3.1"
+        "dotenv": "^16.3.1",
+        "express": "^4.18.2",
+        "express-validator": "^7.3.1",
+        "jsonwebtoken": "^9.0.3",
+        "kafkajs": "^2.2.4",
+        "mongoose": "^8.0.0",
+        "multer": "^2.0.2",
+        "nodemailer": "^8.0.1",
+        "swagger-ui-express": "^5.0.1",
+        "yamljs": "^0.3.0"
     },
     "devDependencies": {
         "nodemon": "^3.0.1"
