--- a/backend/services/auth-service/package.json
+++ b/backend/services/auth-service/package.json
@@ -14,12 +14,16 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
+    "express-session": "^1.19.0",
     "express-validator": "^7.0.1",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.0",
     "morgan": "^1.10.0",
-    "nodemailer": "^8.0.1"
+    "nodemailer": "^8.0.1",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
+    "twilio": "^5.12.2"
   },
   "devDependencies": {
     "jest": "^29.7.0",
