--- a/backend/services/complaint-service/package.json
+++ b/backend/services/complaint-service/package.json
@@ -5,7 +5,8 @@
     "main": "src/index.js",
     "scripts": {
         "start": "node src/index.js",
-        "dev": "nodemon src/index.js"
+        "dev": "nodemon src/index.js",
+        "test": "jest"
     },
     "dependencies": {
         "bcryptjs": "^3.0.3",
@@ -22,6 +23,7 @@
         "yamljs": "^0.3.0"
     },
     "devDependencies": {
+        "jest": "^30.2.0",
         "nodemon": "^3.0.1"
     }
 }
