--- a/backend/services/complaint-service/package.json
+++ b/backend/services/complaint-service/package.json
@@ -10,6 +10,7 @@
     },
     "dependencies": {
         "bcryptjs": "^3.0.3",
+        "cloudinary": "^1.41.3",
         "cors": "^2.8.5",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
@@ -18,7 +19,9 @@
         "kafkajs": "^2.2.4",
         "mongoose": "^8.0.0",
         "multer": "^2.0.2",
+        "multer-storage-cloudinary": "^4.0.0",
         "nodemailer": "^8.0.1",
+        "pdfkit": "^0.17.2",
         "swagger-ui-express": "^5.0.1",
         "yamljs": "^0.3.0"
     },
