--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -100,6 +100,12 @@ services:
       - SERVICE_NAME=community-service
       - MONGODB_URI=mongodb://mongodb:27017/laborguard
       - KAFKA_BROKER=kafka:9092
+      - PERSPECTIVE_API_KEY=${PERSPECTIVE_API_KEY}
+      - CLOUDINARY_CLOUD_NAME=${CLOUDINARY_CLOUD_NAME}
+      - CLOUDINARY_API_KEY=${CLOUDINARY_API_KEY}
+      - CLOUDINARY_API_SECRET=${CLOUDINARY_API_SECRET}
+      - TOXICITY_THRESHOLD=0.7
+      - NSFW_THRESHOLD=0.5
     depends_on:
       mongodb:
         condition: service_healthy
