--- a/backend/services/messaging-service/package.json
+++ b/backend/services/messaging-service/package.json
@@ -5,16 +5,21 @@
     "main": "src/index.js",
     "scripts": {
         "start": "node src/index.js",
-        "dev": "nodemon src/index.js"
+        "dev": "nodemon src/index.js",
+        "test": "jest"
     },
     "dependencies": {
-        "express": "^4.18.2",
-        "mongoose": "^8.0.0",
-        "kafkajs": "^2.2.4",
+        "axios": "^1.6.2",
+        "cloudinary": "^1.41.1",
         "cors": "^2.8.5",
-        "dotenv": "^16.3.1"
+        "dotenv": "^16.3.1",
+        "express": "^4.18.2",
+        "kafkajs": "^2.2.4",
+        "mongoose": "^8.0.0",
+        "multer": "^1.4.5-lts.1"
     },
     "devDependencies": {
+        "jest": "^29.7.0",
         "nodemon": "^3.0.1"
     }
 }
