--- a/backend/services/notification-service/package.json
+++ b/backend/services/notification-service/package.json
@@ -5,16 +5,19 @@
     "main": "src/index.js",
     "scripts": {
         "start": "node src/index.js",
-        "dev": "nodemon src/index.js"
+        "dev": "nodemon src/index.js",
+        "test": "jest"
     },
     "dependencies": {
         "express": "^4.18.2",
         "mongoose": "^8.0.0",
         "kafkajs": "^2.2.4",
         "cors": "^2.8.5",
-        "dotenv": "^16.3.1"
+        "dotenv": "^16.3.1",
+        "resend": "^3.2.0"
     },
     "devDependencies": {
+        "jest": "^29.7.0",
         "nodemon": "^3.0.1"
     }
 }
